--- a/src/style.css
+++ b/src/style.css
@@ -58,7 +58,7 @@ nav div {
 }
 
 #menuBars:hover {
-	background-color: #c6c6c6a2;
+	background-color: #c6c6c6;
 }
 
 nav img {
@@ -156,6 +156,35 @@ footer p {
 	color: #868585;
 }
 
+#darkModeSettings {
+	position: absolute;
+	background-color: white;
+	bottom: 50px;
+	right: 20px;
+	padding: 7px 0;
+	border-radius: 8px;
+	cursor: pointer;
+	box-shadow: 0px 1px 6px #cfcfcf9f;
+	color: #3a3939;
+	display: none;
+}
+
+#darkModeSettings p {
+	padding: 5px 11px;
+	display: flex;
+	align-items: center;
+	gap: 10px;
+	color: #3a3939;
+}
+
+#darkModeSettings i {
+	font-size: 1.05rem;
+}
+
+#darkModeSettings p:hover {
+	background-color: #e1e0e0bf;
+}
+
 footer section {
 	padding: 13px 40px;
 }
@@ -208,6 +237,7 @@ footer section {
 		width: 60%;
 	}
 }
+
 @media (min-width: 1301px) and (max-width: 1900px) {
 	main section {
 		width: 40%;
